fix: use overflow clip instead of hidden, as it is safer

--- a/src/assets/stylesheets/elements/_elements.page.scss
+++ b/src/assets/stylesheets/elements/_elements.page.scss
@@ -18,5 +18,5 @@ html {
 
 body {
   cursor: default;
-  overflow: hidden;
+  overflow: clip;
 }
